--- a/Corona Data Muncher/UI Elements/Base.lproj/Main.storyboard
+++ b/Corona Data Muncher/UI Elements/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="11134" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11134"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="16097"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -673,7 +674,7 @@
                         <outlet property="delegate" destination="Voe-Tx-rLC" id="PrD-fu-P6m"/>
                     </connections>
                 </application>
-                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModuleProvider="target"/>
+                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="Corona_Data_Muncher" customModuleProvider="target"/>
                 <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -683,7 +684,7 @@
         <scene sceneID="R2V-B0-nI4">
             <objects>
                 <windowController id="B8D-0N-5wS" sceneMemberID="viewController">
-                    <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
+                    <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="MainWindow" animationBehavior="default" titlebarAppearsTransparent="YES" titleVisibility="hidden" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                         <rect key="contentRect" x="196" y="240" width="480" height="270"/>
@@ -700,18 +701,109 @@
             </objects>
             <point key="canvasLocation" x="75" y="250"/>
         </scene>
-        <!--View Controller-->
+        <!--Main View Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController id="XfG-lQ-9wD" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="XfG-lQ-9wD" customClass="MainViewController" customModule="Corona_Data_Muncher" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1217" height="400"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="njN-J8-38B">
+                                <rect key="frame" x="18" y="8" width="37" height="16"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Label" id="JYE-eh-iv6">
+                                    <font key="font" usesAppearanceFont="YES"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <customView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zG3-UW-rTs" customClass="HeaderView" customModule="Corona_Data_Muncher" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="255" width="1217" height="145"/>
+                                <subviews>
+                                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="X5k-fg-9Q0">
+                                        <rect key="frame" x="945" y="20" width="252" height="105"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="252" id="2HB-wb-nou"/>
+                                        </constraints>
+                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="Covid" id="lsg-e3-Mys"/>
+                                    </imageView>
+                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="tWQ-Zq-DRq">
+                                        <rect key="frame" x="18" y="97" width="66" height="28"/>
+                                        <textFieldCell key="cell" lineBreakMode="clipping" title="Label" id="XsL-O3-aM7">
+                                            <font key="font" metaFont="systemBold" size="24"/>
+                                            <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                        </textFieldCell>
+                                    </textField>
+                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="TI4-2x-RD0">
+                                        <rect key="frame" x="18" y="61" width="66" height="28"/>
+                                        <textFieldCell key="cell" lineBreakMode="clipping" title="Label" id="xLR-Y3-zOt">
+                                            <font key="font" metaFont="systemBold" size="24"/>
+                                            <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                        </textFieldCell>
+                                    </textField>
+                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="P2Z-i4-lwu">
+                                        <rect key="frame" x="18" y="25" width="66" height="28"/>
+                                        <textFieldCell key="cell" lineBreakMode="clipping" title="Label" id="Rsp-Yr-laE">
+                                            <font key="font" metaFont="systemBold" size="24"/>
+                                            <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                        </textFieldCell>
+                                    </textField>
+                                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Uaa-sT-bdK">
+                                        <rect key="frame" x="964" y="86" width="32" height="37"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="32" id="FTA-F4-FOf"/>
+                                        </constraints>
+                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyUpOrDown" image="UK" id="1tF-qJ-KwG"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="X5k-fg-9Q0" secondAttribute="trailing" constant="20" symbolic="YES" id="03v-b2-EeP"/>
+                                    <constraint firstAttribute="bottom" secondItem="Uaa-sT-bdK" secondAttribute="bottom" constant="86" id="2ae-ez-TSs"/>
+                                    <constraint firstAttribute="bottom" secondItem="X5k-fg-9Q0" secondAttribute="bottom" constant="20" symbolic="YES" id="4n4-Yu-DCi"/>
+                                    <constraint firstItem="X5k-fg-9Q0" firstAttribute="top" secondItem="zG3-UW-rTs" secondAttribute="top" constant="20" symbolic="YES" id="88I-q0-ZCl"/>
+                                    <constraint firstItem="P2Z-i4-lwu" firstAttribute="top" secondItem="TI4-2x-RD0" secondAttribute="bottom" constant="8" id="9hM-nw-jPk"/>
+                                    <constraint firstAttribute="trailing" secondItem="Uaa-sT-bdK" secondAttribute="trailing" constant="221" id="KfN-Ba-vMK"/>
+                                    <constraint firstItem="P2Z-i4-lwu" firstAttribute="top" secondItem="X5k-fg-9Q0" secondAttribute="bottom" constant="-33" id="NQa-Tn-0y6"/>
+                                    <constraint firstItem="X5k-fg-9Q0" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="TI4-2x-RD0" secondAttribute="trailing" constant="20" id="Oe7-Ji-Lhc"/>
+                                    <constraint firstItem="X5k-fg-9Q0" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="P2Z-i4-lwu" secondAttribute="trailing" constant="20" id="ROn-Q8-UJR"/>
+                                    <constraint firstItem="tWQ-Zq-DRq" firstAttribute="top" secondItem="zG3-UW-rTs" secondAttribute="top" constant="20" id="Z47-Gs-Bvq"/>
+                                    <constraint firstItem="Uaa-sT-bdK" firstAttribute="top" secondItem="zG3-UW-rTs" secondAttribute="top" constant="22" id="aZv-27-fCh"/>
+                                    <constraint firstItem="TI4-2x-RD0" firstAttribute="leading" secondItem="tWQ-Zq-DRq" secondAttribute="leading" id="fBt-Lv-t7H"/>
+                                    <constraint firstItem="P2Z-i4-lwu" firstAttribute="leading" secondItem="TI4-2x-RD0" secondAttribute="leading" id="fjl-WJ-aov"/>
+                                    <constraint firstItem="TI4-2x-RD0" firstAttribute="top" secondItem="zG3-UW-rTs" secondAttribute="top" constant="56" id="hpp-Qb-wlr"/>
+                                    <constraint firstItem="tWQ-Zq-DRq" firstAttribute="leading" secondItem="zG3-UW-rTs" secondAttribute="leading" constant="20" id="nsc-yf-IOx"/>
+                                    <constraint firstAttribute="height" constant="145" id="rxw-JD-3LI"/>
+                                    <constraint firstItem="X5k-fg-9Q0" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="tWQ-Zq-DRq" secondAttribute="trailing" constant="20" id="ur2-9A-4Y8"/>
+                                    <constraint firstItem="TI4-2x-RD0" firstAttribute="top" secondItem="tWQ-Zq-DRq" secondAttribute="bottom" constant="8" id="vI5-Pn-z1m"/>
+                                </constraints>
+                            </customView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="njN-J8-38B" secondAttribute="trailing" constant="20" id="2Vv-SD-CDu"/>
+                            <constraint firstItem="zG3-UW-rTs" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="bMe-91-OBL"/>
+                            <constraint firstAttribute="trailing" secondItem="zG3-UW-rTs" secondAttribute="trailing" id="rsi-Wf-G5O"/>
+                            <constraint firstItem="njN-J8-38B" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" id="t4Z-Ic-85L"/>
+                            <constraint firstAttribute="bottom" secondItem="njN-J8-38B" secondAttribute="bottom" constant="8" id="vXp-YO-lLY"/>
+                            <constraint firstItem="zG3-UW-rTs" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" id="wQx-e2-xFI"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="casesLabel" destination="P2Z-i4-lwu" id="BCl-dr-4yH"/>
+                        <outlet property="dateLabel" destination="tWQ-Zq-DRq" id="AxI-xg-NTo"/>
+                        <outlet property="deathsLabel" destination="TI4-2x-RD0" id="lXn-zn-rTr"/>
+                        <outlet property="statusBarLabel" destination="njN-J8-38B" id="86g-9F-c8n"/>
+                    </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="655"/>
+            <point key="canvasLocation" x="219.5" y="720"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Covid" width="350" height="150"/>
+        <image name="UK" width="128" height="64"/>
+    </resources>
 </document>
